wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
    - port: 443
      name: https
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
  type: ClusterIP
