wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-yaoyingying"
spec:
  tls:
    - hosts:
        - www.yaoyingying.com
      secretName: tls-secret
  rules:
    - host: www.yaoyingying.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
